añadido ruta de angular a cors

--- a/socialSound/templates/CRUD_cancion/busqueda_avanzada_canciones.html
+++ b/socialSound/templates/CRUD_cancion/busqueda_avanzada_canciones.html
@@ -120,7 +120,7 @@
 <div class="container-star">
     <div class="stars"></div>
     <div class="container py-5">
-    <h2 class='text-white'>{{ title }}</h2>
+    <h2 class='text-warning m-2'>{{ title }}</h2>
     
     <div class="card mb-4 bg-dark text-white shadow-sm border-0">
         <div class="card-body">
