--- a/socialSound/templates/CRUD_usuario/busqueda_avanzada_usuarios.html
+++ b/socialSound/templates/CRUD_usuario/busqueda_avanzada_usuarios.html
@@ -8,7 +8,7 @@
 
 {% block contenido %}
 <div class="container-star">
-<div class="container mt-4">
+<div class="container mt-4 p-4">
     <div class="stars"></div>
     <h2 class="mb-4 text-warning">Búsqueda Avanzada de Usuarios</h2>
 
