--- a/socialSound/templates/playlist/lista_playlist.html
+++ b/socialSound/templates/playlist/lista_playlist.html
@@ -2,30 +2,33 @@
 {% load static %}
 {% block extra_css %}
 <link rel="stylesheet" href="{% static 'css/fondo_estrella.css' %}">
+
 {% endblock %}
 
 {% block contenido %}
 <div class="container-star">
+    <div class="stars"></div>
     <div class="container mt-4">
-        <div class="stars"></div>
-    <div class="d-flex justify-content-between align-items-center mb-4">
-        <h2 class="text-white">Playlists de {{ usuario.nombre_usuario }}</h2>
-        {% if user == usuario %}
-            <a href="{% url 'crear_playlist' %}" class="btn btn-primary">
-                <i class="fas fa-plus"></i> Crear Playlist
-            </a>
-        {% endif %}
-    </div>
+        <div class="d-flex justify-content-between align-items-center mb-4 p-4">
+            <h2 class="text-white">Playlists de {{ usuario.nombre_usuario }}</h2>
+            {% if user == usuario %}
+                <a href="{% url 'crear_playlist' %}" class="btn btn-primary">
+                    <i class="fas fa-plus"></i> Crear Playlist
+                </a>
+            {% endif %}
+        </div>
 
-    <div class="row">
-        {% for playlist in playlists %}
-         {% include 'playlist/playlist.html' %}   
-        {% empty %}
-            <div class="col-12">
-                <p class="text-center">No hay playlists para mostrar.</p>
-            </div>
-        {% endfor %}
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            {% if playlists %}
+                {% for playlist in playlists %}
+                    {% include 'playlist/playlist.html' %}   
+                {% endfor %}
+            {% else %}
+                <div class="col-12">
+                    <p class="text-center text-white">No hay playlists para mostrar.</p>
+                </div>
+            {% endif %}
+        </div>
     </div>
-</div>
 </div>
 {% endblock %}
