--- a/socialSound/templates/usuario/feed.html
+++ b/socialSound/templates/usuario/feed.html
@@ -3,6 +3,13 @@
 
 {% block extra_css %}
 <link rel="stylesheet" href="{% static 'css/fondo_estrella.css' %}">
+
+<style>
+.container-star{
+    margin-top: -48px;
+    padding: 35px;
+}
+</style>
 {% endblock %}
 
 {% block contenido %}
